--- a/templates/gear/gear_create.html
+++ b/templates/gear/gear_create.html
@@ -47,105 +47,129 @@
             <input name="name" type="text" class="form-control" aria-label="Gearset Name" required>
         </div>
     </div>
-    <div class="container border">
-        <div class="row align-items-center">
-            <div class="col-md-4">
-                <span>Weapon</span>
-                <img src="/static/images/gear/mainhand.png" class="img-fluid">
+    <div class="container border p-4">
+        <div class="row">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/mainhand.png" class="img-fluid">
+                    <span class="">Weapon</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="weapon" class="custom-select" id="WeaponSelect">
                     </select>
                 </div>
             </div>
-            <div class="col-md-4">
-                <span>Offhand</span>
-                <img src="/static/images/gear/offhand.png" class="img-fluid">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/offhand.png" class="img-fluid">
+                    <span>Offhand</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="offhand" class="custom-select" id="OffhandSelect">
                     </select>
                 </div>
             </div>
-            <div class="col-md-4">
-                <span>Helmet</span>
-                <img src="/static/images/gear/head.png" class="img-fluid">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/head.png" class="img-fluid">
+                    <span>Helmet</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="helmet" class="custom-select" id="HelmetSelect">
                     </select>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col col-md-4">
-                <span>Body</span>
-                <img src="/static/images/gear/body.png" class="img-fluid">
+        <div class="row mt-2">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/body.png" class="img-fluid">
+                    <span>Body</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="body" class="custom-select" id="BodySelect">
                     </select>
                 </div>
             </div>
-            <div class="col col-md-4">
-                <span>Gloves</span>
-                <img src="/static/images/gear/hands.png" class="img-fluid">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/hands.png" class="img-fluid">
+                    <span>Gloves</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="gloves" class="custom-select" id="GlovesSelect">
                     </select>
                 </div>
             </div>
-            <div class="col col-md-4">
-                <span>Pants</span>
-                <img src="/static/images/gear/underlegs.png" class="img-fluid">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/underlegs.png" class="img-fluid">
+                    <span>Pants</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="pants" class="custom-select" id="PantsSelect">
                     </select>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col col-md-4">
-                <span>Boots</span>
-                <img src="/static/images/gear/feet.png" class="img-fluid">
+        <div class="row mt-2">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/feet.png" class="img-fluid">
+                    <span>Boots</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="boots" class="custom-select" id="BootsSelect">
                     </select>
                 </div>
             </div>
-            <div class="col col-md-4">
-                <span>Earrings</span>
-                <img src="/static/images/gear/ear.png" class="img-fluid">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/ear.png" class="img-fluid">
+                    <span>Earrings</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="earring" class="custom-select" id="EarringSelect">
                     </select>
                 </div>
             </div>
-            <div class="col col-md-4">
-                <span>Necklace</span>
-                <img src="/static/images/gear/neck.png" class="img-fluid">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/neck.png" class="img-fluid">
+                    <span>Necklace</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="necklace" class="custom-select" id="NecklaceSelect">
                     </select>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col col-md-4">
-                <span>Bracelet</span>
-                <img src="/static/images/gear/wrist.png" class="img-fluid">
+        <div class="row mt-2">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/wrist.png" class="img-fluid">
+                    <span>Bracelet</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="bracelet" class="custom-select" id="BraceletSelect">
                     </select>
                 </div>
             </div>
-            <div class="col col-md-4">
-                <span>Left Ring</span>
-                <img src="/static/images/gear/ring.png" class="img-fluid">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/ring.png" class="img-fluid">
+                    <span>Left Ring</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="lring" class="custom-select" id="LRingSelect">
                     </select>
                 </div>
             </div>
-            <div class="col col-md-4">
-                <span>Right Ring</span>
-                <img src="/static/images/gear/ring.png" class="img-fluid">
+            <div class="col border">
+                <div>
+                    <img src="/static/images/gear/ring.png" class="img-fluid">
+                    <span>Right Ring</span>
+                </div>
                 <div class="input-group mb-3">
                     <select name="rring" class="custom-select" id="RRingSelect">
                     </select>
@@ -153,8 +177,9 @@
             </div>
         </div>
         {% if g.user %}
-            <button class="btn btn-primary float-end" type="submit">Save</button>
-            <br><br>
+            <div class="container" style="height: 50px">
+                <button class="btn btn-light float-end mt-3" style="width: 70px;" type="submit">Save</button>
+            </div>
         {% endif %}
     </div>
 </form>
@@ -162,5 +187,5 @@
 {% endblock %}
 
 {% block script %}
-<script src="/static/js/gear.js"></script>
+<script src="/static/js/gear_create.js"></script>
 {% endblock %}
