completed home template

--- a/templates/home.html
+++ b/templates/home.html
@@ -30,8 +30,8 @@
             <div class="col m-2 border">
                 <p>Characters</p>
                 <div>
-                    {% if g.user.character %}
-                        {% for character in g.user.character %}
+                    {% if g.user.characters %}
+                        {% for character in g.user.characters %}
                             <div class="card mb-2">
                                 <div class="row g-0">
                                     <div class="col-2 align-self-center">
